[package]
name = "taskmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
clap = {version = "3.1.9", features = ["color", "cargo"]}
ron = "0.7.0"
serde = "1.0.136"
